Fix CORS: Remove wildcard with credentials, use explicit origins list